test: add remove tests